<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="app_name">Classic Warlord</string>
    <string name="game_title">Classic Warlord!</string>
    <string name="game_blurb">A turn based strategy game where players attempt to dominate the board by force and cunning. \nTo play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Currently unavailable</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="provinceselectinstructions">Select a province!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="victory">You are victorious!</string>
    <string name="defeat">You are defeated!</string>
    <string name="attack">Select an amount of armies to attack with (Must be between 1 and the amount of armies you have).</string>
    <string name="defend">You are under attack! Choose how many armies you think you opponent used.</string>
    <string name="exitgamebutton">Exit</string>
    <string name="controls">This application is the first mobile version of the world domination strategy board game "Classic Warlord".
        \n Classic Warlord was created by Mike Hayes, and the mobile application was built on behalf of the University of Sheffield by Samuel Taylor as part of the requirements for his MSc dissertation.
        \n For more information on the board game and it\'s rules visit ClassicWarlord.com.
        \n\n Gameplay is controlled by tapping on regions to interact with them at each stage of play; the current stage of play is displayed in the top right corner of the game screen and can be tapped on to expand for more information.
        \n For example, to select a region simply tap on it, or if it is the attacking phase, tap on the region you wish to attack from,and then the region you wish to attack.
        \n Players may pan and zoom on the map by dragging or pinching the screen. Information on the armies and bombs of each region are visible when zoomed in.
        \n Players may inspect regions for more information by touching and holding down on that region.
        \n Players may chat to other players by tapping on the bottom of the chat log, typing their message and then clicking enter or the "Send" button.</string>

</resources>
